# simul2design

./: .gitignore  IDEA.md  INTEGRATION.md  README.md  SETUP.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/: adversary.md  code-reviewer.md  planner.md
.claude/hooks/: log-tool-call.js  log-user-correction.js  post-edit-format.js  post-edit-typecheck.js  post-tool-use-progress.js  pre-tool-use-plan.js  stop-verify.js  suggest-compact.js
.claude/observability/: README.md
.claude/research/: autoresearch-prompt.md  run-autoresearch.sh
.claude/rules/: code-quality.md  cross-model-verification.md  element-taxonomy-univest.md  git-practices.md  planning.md  session-persistence.md
.claude/self-edit/: weekly-ritual.md
data/univest/: source-v2.md  (+8 more)
scripts/: automap-taxonomy-llm.py  automap-taxonomy.py  detect-confounds.py  ingest-apriori.py  refetch-source.sh  render-report.py  sim-flow.py  test-ab-report-adapter.py  test-automap-taxonomy-llm.py  test-automap-taxonomy.py  test-cascade-llm.py  test-cascade.py  test-ingest-apriori.py  test-package.py  test-render-visual.py  wilson-intervals.py
simul2design/: __init__.py  automap_llm.py  automap_rules.py  ingest.py  langgraph_node.py  pipeline.py  schemas.py  taxonomy.py
tasks/: ab-report-adapter-plan.md  engine-side-pr-draft.md  findings.md  handoff-2026-04-23-late.md  handoff-2026-04-23.md  handoff-2026-04-26.md  improvements.md  lessons.md  parse-simulation-plan.md  progress.md  related-work.md  render-visual-plan.md  synthesize-plan.md  todo.md  weigh-segments-plan.md
(+32 files in other folders)
